# onepaper

./: README.md
backend/: .dockerignore  .env  .gitignore  Dockerfile  fly.toml  pyproject.toml  requirements.txt
backend/src/backend/: auth.py  database.py  main.py  models.py  schemas.py  tasks.py  worker.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/papers/[id]/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/submit/: page.tsx
frontend/src/app/submit/status/: page.tsx
frontend/src/components/: filter-panel.tsx  navbar.tsx  pagination-controls.tsx  paper-card-skeleton.tsx  paper-card.tsx
frontend/src/context/: auth-context.tsx
frontend/src/lib/: api.ts
processing/: .gitignore  pyproject.toml
processing/src/processing/: convert_to_jsonl.py  download_pdfs.py  generate_embeddings.py  minimal.py  process_meta.py  process_pdfs.py  rename_pdfs.py
