[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "JosephJoshua",email = "jj.anggita@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (==0.115.9)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "sqlalchemy",
    "pydantic[email]", "python-jose[cryptography]", "passlib[argon2]", "python-multipart", "python-dotenv (>=1.1.0,<2.0.0)", "argon2-cffi (>=25.1.0,<26.0.0)", "sentence-transformers (>=4.1.0,<5.0.0)", "chromadb (>=1.0.12,<2.0.0)"
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
